--- a/angular.json
+++ b/angular.json
@@ -103,9 +103,21 @@
             ],
             "scripts": []
           }
+        },
+        "lint": {
+          "builder": "@angular-eslint/builder:lint",
+          "options": {
+            "lintFilePatterns": [
+              "src/**/*.ts",
+              "src/**/*.html"
+            ]
+          }
         }
       }
     }
   },
-  "defaultProject": "test-assignment"
+  "defaultProject": "test-assignment",
+  "cli": {
+    "defaultCollection": "@angular-eslint/schematics"
+  }
 }
