--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "~13.1.0",
     "@ngrx/effects": "^13.0.2",
     "@ngrx/store": "^13.0.2",
+    "karma-firefox-launcher": "^2.1.2",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
@@ -44,7 +45,7 @@
     "eslint-plugin-ngrx": "^2.0.0",
     "jasmine-core": "~3.10.0",
     "karma": "~6.3.0",
-    "karma-chrome-launcher": "~3.1.0",
+    "karma-chrome-launcher": "^3.1.0",
     "karma-coverage": "~2.1.0",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
