--- a/.github/workflows/test-assignment.actions.yaml
+++ b/.github/workflows/test-assignment.actions.yaml
@@ -21,4 +21,4 @@ jobs:
           deploy_key: ${{secrets.ACTIONS_DEPLOY_KEY}}
           publish_dir: ./docs
           destination_dir: ./docs
-          publish_branch: main
+          publish_branch: master
