--- a/.github/workflows/test-assignment.actions.yaml
+++ b/.github/workflows/test-assignment.actions.yaml
@@ -14,7 +14,7 @@ jobs:
       - run: npm install
       - run: npm ci
       - run: npm test -- --no-watch --no-progress --browsers=ChromeHeadlessCI
-      - run: npm run build
+      - run: npm run build --configuration production
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
